<resources>
    <string name="app_name">AlcChanllengeOne</string>
    <string name="title_activity_about_alc">About Alc</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="welcome_to_alc_4_0">Welcome to alc 4.0</string>
    <string name="image_of_hamzat">Image of HamzaT</string>
    <string name="slack_username">Slack Username:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="country">Country:</string>
    <string name="track">Track:</string>
</resources>
